# HaikangCamera

./: CMakeLists.txt  main.cpp
HaikangCamera/CameraGray/: HaiKangCameraGray.cpp  HaiKangCameraGray.h
HaikangCamera/CameraRGB/: HaiKangCameraRGB.h
